horizontal scroll fixed

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,10 +1,15 @@
 .about {
   &__reason {
     @include onTablet {
+      height: 417px;
       @include pageGrid;
     }
 
     &--2 {
+      @include onTablet {
+        margin-top: 140px;
+      }
+
       @include onDesktop {
         margin-top: 170px;
       }
@@ -50,19 +55,20 @@
       display: block;
       background-size: cover;
       background-repeat: no-repeat;
-      height: 415px;
-      width: 49%;
+      width: 49vw;
 
       &--1 {
         background-image: url(../images/main/about/about_1_tabl.png);
-        margin-block: -340px 140px;
-        grid-column: span 4;
+        height: 415px;
+        position: absolute;
+        left: 0;
       }
 
       &--2 {
         background-image: url(../images/main/about/about_2_tabl.png);
-        margin-left: 52%;
-        margin-top: -246px;
+        height: 417px;
+        position: absolute;
+        left: 0;
       }
     }
 
@@ -97,6 +103,7 @@
     display: flex;
     flex-direction: column;
     grid-column: 5 / -1;
+    position: relative;
 
     @include onDesktop {
       grid-column: span 6;
@@ -107,6 +114,7 @@
     display: flex;
     flex-direction: column;
     grid-column: 1 / 5;
+    position: relative;
 
     @include onDesktop {
       grid-column: span 6;
